added gameply video to homescreen

--- a/public/index.html
+++ b/public/index.html
@@ -456,12 +456,8 @@
                 </div>
             </div>
             <div class="neo-card p-2 transform rotate-2 hover:rotate-0 transition-transform duration-500">
-                <div class="bg-black rounded-lg aspect-video flex items-center justify-center border border-white/20 overflow-hidden relative">
-                    <div class="absolute inset-0 opacity-20 bg-[radial-gradient(circle,#22d3ee_1px,transparent_1px)] bg-[size:20px_20px]"></div>
-                    <div class="text-center">
-                        <i data-lucide="bot" class="w-16 h-16 text-slate-600 mx-auto mb-2"></i>
-                        <span class="text-xs font-mono text-slate-500">GAMEPLAY_PREVIEW</span>
-                    </div>
+                <div class="bg-black rounded-lg aspect-video border border-white/20 overflow-hidden relative flex items-center justify-center">
+                    <video class="w-full h-full object-contain" src="/Claw%20IO%20Gameplay%20Low.mp4" autoplay muted loop playsinline></video>
                 </div>
             </div>
         </section>
