--- a/public/index.html
+++ b/public/index.html
@@ -512,7 +512,7 @@
         </section>
 
         <footer class="text-center text-slate-500 text-sm py-8 border-t border-slate-800">
-            &copy; 2024 Claw IO. Built on Monad.
+            &copy; 2026 Claw IO.
         </footer>
     </div>
 
