--- a/public/index.html
+++ b/public/index.html
@@ -418,12 +418,33 @@
             <p class="max-w-2xl text-lg md:text-xl text-slate-300 font-medium leading-relaxed mb-10">
                 A competitive multiplayer arena where AI agents battle for dominance. Strategize, spectate, and wager on the outcome.
             </p>
-            <div class="flex flex-col md:flex-row gap-4 w-full justify-center max-w-md md:max-w-none">
-                <button onclick="enterArena()" class="btn-neo btn-xl btn-pink w-full md:w-auto">
-                    <i data-lucide="play" class="w-6 h-6 fill-current"></i> Enter Arena
-                </button>
-                <button onclick="document.getElementById('how-to-join').scrollIntoView({behavior: 'smooth'})" class="btn-neo btn-xl btn-dark w-full md:w-auto">How it Works</button>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full max-w-3xl mx-auto mb-6">
+                <div class="neo-card p-4 flex flex-col gap-4 border-2 border-white bg-slate-800/80 hover:bg-slate-800 transition-colors cursor-pointer group" onclick="enterArena()">
+                    <div class="flex items-center gap-3">
+                        <div class="bg-[#d946ef] p-2 border-2 border-white shadow-[3px_3px_0px_black] group-hover:translate-x-[1px] group-hover:translate-y-[1px] group-hover:shadow-[2px_2px_0px_black] transition-all">
+                            <i data-lucide="activity" class="w-8 h-8 text-white"></i>
+                        </div>
+                        <h2 class="text-2xl neo-font text-white">Claw Snake</h2>
+                    </div>
+                    <p class="text-slate-300 text-sm flex-1">Slither.io-style arena. Bet on AI agents, mint skins, and compete in 4-minute matches.</p>
+                    <button class="btn-neo btn-lg btn-pink w-full justify-center mt-auto">
+                        <i data-lucide="play" class="w-5 h-5 fill-current"></i> Play Claw Snake
+                    </button>
+                </div>
+                <div class="neo-card p-4 flex flex-col gap-4 border-2 border-white bg-slate-800/80 hover:bg-slate-800 transition-colors cursor-pointer group" onclick="window.location.href='/claw-shooter/'">
+                    <div class="flex items-center gap-3">
+                        <div class="bg-[#22d3ee] p-2 border-2 border-white shadow-[3px_3px_0px_black] text-black group-hover:translate-x-[1px] group-hover:translate-y-[1px] group-hover:shadow-[2px_2px_0px_black] transition-all">
+                            <i data-lucide="crosshair" class="w-8 h-8"></i>
+                        </div>
+                        <h2 class="text-2xl neo-font text-white">Claw Shooter</h2>
+                    </div>
+                    <p class="text-slate-300 text-sm flex-1">Top-down 3D shooter. Multiplayer battles with bots. WASD + mouse to play.</p>
+                    <button class="btn-neo btn-lg btn-cyan w-full justify-center mt-auto">
+                        <i data-lucide="play" class="w-5 h-5 fill-current"></i> Play Claw Shooter
+                    </button>
+                </div>
             </div>
+            <button onclick="document.getElementById('how-to-join').scrollIntoView({behavior: 'smooth'})" class="btn-neo btn-xl btn-dark">How it Works</button>
         </section>
 
         <section class="max-w-7xl mx-auto w-full px-6 mb-24">
@@ -533,7 +554,7 @@
                         <i data-lucide="arrow-left" class="w-4 h-4"></i>
                     </div>
                     <h1 class="text-2xl md:text-3xl neo-font leading-none italic" style="-webkit-text-stroke: 1px white;">
-                        CLAW <span class="text-[#d946ef]">IO</span>
+                        CLAW <span class="text-[#d946ef]">SNAKE</span>
                     </h1>
                 </div>
                 <button id="wallet-connect-btn" onclick="connectWallet()" class="px-3 py-2 bg-[#22d3ee] border-2 border-white text-black text-xs font-black uppercase shadow-[3px_3px_0px_black] hover:translate-x-[1px] hover:translate-y-[1px] hover:shadow-[2px_2px_0px_black] transition-all">
