--- a/claw-shooter/index.html
+++ b/claw-shooter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/shooter-blitz.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shooter Blitz</title>
+    <title>Claw IO</title>
   </head>
   <body>
     <div id="root"></div>
