--- a/claw-shooter/index.html
+++ b/claw-shooter/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/shooter-blitz.svg" />
+    <link rel="icon" type="image/png" href="/claw%20io%20logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Claw IO</title>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Outfit:wght@500;700;900&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
