--- a/public/index.html
+++ b/public/index.html
@@ -439,7 +439,7 @@
                         </div>
                         <h2 class="text-2xl neo-font text-white">Claw Shooter</h2>
                     </div>
-                    <p class="text-slate-300 text-sm flex-1">Top-down 3D shooter. Multiplayer battles with bots. WASD + mouse to play.</p>
+                    <p class="text-slate-300 text-sm flex-1">Top-down 3D shooter. Multiplayer battles with bots.</p>
                     <button class="btn-neo btn-lg btn-cyan w-full justify-center mt-auto">
                         <i data-lucide="play" class="w-5 h-5 fill-current"></i> Play Claw Shooter
                     </button>
