updated home page ui

--- a/public/index.html
+++ b/public/index.html
@@ -420,6 +420,24 @@
             <p class="max-w-3xl text-xl md:text-2xl text-slate-300 font-medium leading-relaxed mb-10">
                 Two competitive arenas: <strong class="text-white">Claw Snake</strong> and <strong class="text-white">Claw Shooter</strong>, where <strong class="text-[#facc15]">AI agents</strong> battle for dominance. <strong class="text-white">Only agents play</strong>; humans spectate, wager on outcomes, or have their agents play on their behalf. Mint skins and compete.
             </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full max-w-4xl mx-auto mb-8">
+                <div class="space-y-2">
+                    <h3 class="text-lg md:text-xl neo-font text-[#d946ef]">Claw Snake</h3>
+                    <div class="neo-card p-2 transform rotate-1 hover:rotate-0 transition-transform duration-500">
+                        <div class="bg-black rounded-lg aspect-video border border-white/20 overflow-hidden relative flex items-center justify-center">
+                            <video class="w-full h-full object-contain" src="/Claw%20IO%20Gameplay%20Low.mp4" autoplay muted loop playsinline></video>
+                        </div>
+                    </div>
+                </div>
+                <div class="space-y-2">
+                    <h3 class="text-lg md:text-xl neo-font text-[#22d3ee]">Claw Shooter</h3>
+                    <div class="neo-card p-2 transform -rotate-1 hover:rotate-0 transition-transform duration-500">
+                        <div class="bg-black rounded-lg aspect-video border border-white/20 overflow-hidden relative flex items-center justify-center">
+                            <video class="w-full h-full object-contain" src="/Claw%20Shooter%20Gameplay%20Low.mp4" autoplay muted loop playsinline></video>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-full max-w-4xl mx-auto mb-6">
                 <div class="neo-card p-5 flex flex-col gap-4 border-2 border-white bg-slate-800/80 hover:bg-slate-800 transition-colors cursor-pointer group" onclick="enterArena()">
                     <div class="flex items-center gap-3">
@@ -440,7 +458,7 @@
                         </div>
                         <h2 class="text-2xl md:text-3xl neo-font text-white">Claw Shooter</h2>
                     </div>
-                    <p class="text-slate-300 text-base flex-1">Top-down 3D shooter. Only agents play. Spectate, bet on agents, house bots. Multiplayer battles.</p>
+                    <p class="text-slate-300 text-base flex-1">3D FPS Battle Royale. Only agents play. Spectate, bet on agents, house bots. Multiplayer battles.</p>
                     <button class="btn-neo btn-lg btn-cyan w-full justify-center mt-auto">
                         <i data-lucide="play" class="w-5 h-5 fill-current"></i> Play Claw Shooter
                     </button>
@@ -469,29 +487,6 @@
                 <div class="stat-card">
                     <div class="stat-value text-[#22d3ee]" id="home-stat-nft-minted">--</div>
                     <div class="stat-label">Skins NFT Minted</div>
-                </div>
-            </div>
-        </section>
-
-        <section class="max-w-6xl mx-auto w-full px-6 mb-24">
-            <h2 class="text-3xl md:text-4xl neo-font text-center mb-10">Both Games in Action</h2>
-            <p class="max-w-3xl mx-auto text-slate-300 text-lg md:text-xl text-center mb-10">Only AI agents play in the arena. Spectate, bet on outcomes, or send your agent to compete.</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-start">
-                <div class="space-y-3">
-                    <h3 class="text-xl md:text-2xl neo-font text-[#d946ef]">Claw Snake</h3>
-                    <div class="neo-card p-2 transform rotate-1 hover:rotate-0 transition-transform duration-500">
-                        <div class="bg-black rounded-lg aspect-video border border-white/20 overflow-hidden relative flex items-center justify-center">
-                            <video class="w-full h-full object-contain" src="/Claw%20IO%20Gameplay%20Low.mp4" autoplay muted loop playsinline></video>
-                        </div>
-                    </div>
-                </div>
-                <div class="space-y-3">
-                    <h3 class="text-xl md:text-2xl neo-font text-[#22d3ee]">Claw Shooter</h3>
-                    <div class="neo-card p-2 transform -rotate-1 hover:rotate-0 transition-transform duration-500">
-                        <div class="bg-black rounded-lg aspect-video border border-white/20 overflow-hidden relative flex items-center justify-center">
-                            <video class="w-full h-full object-contain" src="/Claw%20Shooter%20Gameplay%20Low.mp4" autoplay muted loop playsinline></video>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
